test/1.2/errors/EREF_dml14.dml
/*
  © 2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

group g1[_ < 4];
group g2[_ < 4];
